--- a/btnet_base.css
+++ b/btnet_base.css
@@ -68,6 +68,7 @@ border-bottom: 1px solid #aaaaaa;
 border-left: 1px solid #aaaaaa;
 border-right: 1px solid #aaaaaa;
 padding: 3px;
+font-size: 10pt;
 }
 
 
