--- a/btnet_base.css
+++ b/btnet_base.css
@@ -264,3 +264,7 @@ input  {
 	margin-bottom: 10px;
 }
 
+.wht {margin: auto; display: block; width:10; height:10px; border: 1px solid lightgray;}
+.red {margin: auto; display: block; width:10; height:10px; background: red; border: 1px solid red;}
+.grn {margin: auto; display: block; width:10; height:10px; background: #33ff33; border: 1px solid #33ff33;}
+.blu {margin: auto; display: block; width:10; height:10px; background: #3333ff; border: 1px solid #3333ff;}
