--- a/btnet_base.css
+++ b/btnet_base.css
@@ -264,6 +264,6 @@ input  {
 	margin-bottom: 10px;
 }
 
-.wht {margin: auto; display: block; width:10; height:10px; border: 1px solid lightgray;}
-.red {margin: auto; display: block; width:10; height:10px; background: red; border: 1px solid red;}
-.grn {margin: auto; display: block; width:10; height:10px; background: #33ff33; border: 1px solid #33ff33;}
+.wht {margin: auto; display: block; width:10px; height:10px; border: 1px solid #cccccc;}
+.red {margin: auto; display: block; width:10px; height:10px; background: red; border: 1px solid red;}
+.grn {margin: auto; display: block; width:10px; height:10px; background: #33ff33; border: 1px solid #33ff33;}
