--- a/btnet_base.css
+++ b/btnet_base.css
@@ -257,6 +257,17 @@ option {
 	font-size: 8pt;
 }
 
+.edit_bug_option
+{
+	font-size: 8pt;
+}
+
+.edit_bug_option_none
+{
+	font-size: 8pt;
+	background: #f6f6f6;
+}
+
 input  {
 	font-size: 8pt;
 }
