git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@88 25256582-783d-0410-8f03-f819f29fef2d

--- a/btnet_base.css
+++ b/btnet_base.css
@@ -250,22 +250,23 @@ padding: 3px;
 
 
 select {
-	font-size: 8pt;
+	font-size: 9pt;
 }
 
 option {
-	font-size: 8pt;
+	font-size: 9pt;
 }
 
 .edit_bug_option
 {
-	font-size: 8pt;
+	font-size: 9pt;
 }
 
 .edit_bug_option_none
 {
-	font-size: 8pt;
-	background: #f6f6f6;
+	font-size: 9pt;
+	color: #666666;
+	background: #f3f3f3;
 }
 
 input  {
