--- a/btnet_base.css
+++ b/btnet_base.css
@@ -272,8 +272,13 @@ option {
 
 input  {
 	font-size: 8pt;
+}
+
+.txt  {
+	font-size: 8pt;
 	border: 1px solid #cccccc;
 }
+
 
 textarea {
 	border: 1px solid #cccccc;
