git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@104 25256582-783d-0410-8f03-f819f29fef2d

--- a/btnet_base.css
+++ b/btnet_base.css
@@ -136,10 +136,6 @@ padding: 3px;
 	font-size: 8pt;
 }
 
-.static {
-	font-size: 8pt;
-	font-weight: bold;
-}
 
 .frm {
 	padding-top: 6px;
@@ -261,13 +257,32 @@ option {
 .edit_bug_option
 {
 	font-size: 8pt;
+	font-weight: bold;
 }
 
+// for "[no category]", etc, for dropdowns
 .edit_bug_option_none
 {
 	font-size: 8pt;
 	color: #666666;
 	background: #f3f3f3;
+}
+
+
+.static {
+	font-size: 8pt;
+	font-weight: bold;
+}
+
+.edit_bug_static {
+	font-size: 8pt;
+	font-weight: bold;
+}
+
+// for "[no category]", etc, for readonly fields
+.edit_bug_static_none {
+	font-size: 8pt;
+	color: #666666;
 }
 
 input  {
