git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@146 25256582-783d-0410-8f03-f819f29fef2d

--- a/btnet_base.css
+++ b/btnet_base.css
@@ -173,7 +173,7 @@ padding: 3px;
 	border-bottom: 3px solid black;
 	padding: 3px;
 	position:absolute; top:0; left:0;
-	background:#ccffcc;
+	background:#ddffdd;
 	color:black;
 	display:none;
 	width: 500;
@@ -181,6 +181,8 @@ padding: 3px;
 	font-family: verdana;
 	text-overflow: clip;
 }
+
+.buglist_popup hr {width:50%; height: 1px;}
 
 .suggest_select {
 	font-size:8pt;
