git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@173 25256582-783d-0410-8f03-f819f29fef2d

--- a/btnet_base.css
+++ b/btnet_base.css
@@ -262,7 +262,7 @@ option {
 	font-weight: bold;
 }
 
-// for "[no category]", etc, for dropdowns
+/* for "[no category]", etc, for dropdowns */
 .edit_bug_option_none
 {
 	font-size: 8pt;
@@ -281,7 +281,7 @@ option {
 	font-weight: bold;
 }
 
-// for "[no category]", etc, for readonly fields
+/* for "[no category]", etc, for readonly fields */
 .edit_bug_static_none {
 	font-size: 8pt;
 	color: #666666;
