git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@180 25256582-783d-0410-8f03-f819f29fef2d

--- a/btnet_base.css
+++ b/btnet_base.css
@@ -314,6 +314,11 @@ textarea {
 	margin-bottom: 10px;
 }
 
+/* for flags */
 .wht {margin: auto; display: block; width:40%; height:80%; border: 1px solid #cccccc;}
 .red {margin: auto; display: block; width:40%; height:80%; background: red; border: 1px solid red;}
 .grn {margin: auto; display: block; width:40%; height:80%; background: #33ff33; border: 1px solid #33ff33;}
+
+/* for "new" column */
+.new {margin: auto; display: block; width:30%; height:80%; background: orange; }
+.old {margin: auto; display: block; width:30%; height:80%; border: 1px solid #cccccc; }
