--- a/btnet_base.css
+++ b/btnet_base.css
@@ -106,8 +106,8 @@ a:hover   {color:#ff6633; font-size: 10pt; text-decoration: none; }
 	padding-left: 2px;
 	padding-right: 2px;
 	margin-right: 0px;
-	background:#d0ddd0;
-	style='font-size: 7pt;'
+	background:#e0eee0;
+	color:#0000ff; font-size: 8pt;
 }
 
 .menuinput {
@@ -115,6 +115,7 @@ a:hover   {color:#ff6633; font-size: 10pt; text-decoration: none; }
 	padding-left: 0px;
 	padding: 0px; 
 	font-size: 8pt;
+	border: 1px solid #cccccc;
 }
 
 
@@ -181,7 +182,10 @@ a:hover   {color:#ff6633; font-size: 10pt; text-decoration: none; }
 	color: #999999; font-size: 10pt;
 }
 
-.menu_item {}
+.menu_item {
+
+}
+
 .selected_menu_item {
 	font-weight: bold;
 }
@@ -196,13 +200,13 @@ a:hover   {color:#ff6633; font-size: 10pt; text-decoration: none; }
 	border-left: 1px solid silver;
 	border-top: 1px solid silver;
 	border-right: 2px solid black;
-	border-bottom: 1px dashed #666666; 
+	border-bottom: 1px dashed #cccccc; 
 	padding: 3px;
 	position:absolute; top:0; left:0;
 	background:#ddffdd;
 	color:black;
 	display:none;
-	width: 500;
+	max-width: 500;  /* does not work in ie6 */
 	font-size: 7pt;
 	font-family: verdana;
 	margin:0;
@@ -297,10 +301,35 @@ option {
 }
 
 
-.static {
+.stat {
 	font-size: 8pt;
 	font-weight: bold;
 }
+
+
+.short_desc_static {
+	font-family: verdana,arial;
+	font-size: 10pt;
+	border: 1px solid #aaddaa;
+	padding-top: 2px;
+	padding-left: 3px;
+	padding-right: 4px;
+	padding-bottom: 4px;
+	
+}
+
+
+.bugid {
+	font-size: 10pt;
+	font-weight: bold;
+}
+
+.short_desc_input {
+	font-size: 9pt;
+	width: 650px;
+	border: 1px solid #cccccc;
+}
+
 
 .edit_bug_static {
 	font-size: 8pt;
