--- a/btnet_base.css
+++ b/btnet_base.css
@@ -125,6 +125,11 @@ a:hover   {color:#ff6633; font-size: 10pt; text-decoration: none; }
 	border-bottom: 1px solid #00cc00;
 }
 
+.menu_td {
+	vertical-align: middle;
+	text-align: left;
+}
+
 .cmt {
 	background:white;
 	border: 1px #009900 solid;
